Connecting to MySQL server- Central DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,14 @@ spring.jpa.hibernate.ddl-auto=none
 #The default for H2 and other embedded databases is create-drop, but for others like MySQL is none
 
 ## Database Connection Settings 
-spring.datasource.url=jdbc:mysql://localhost:3306/Hoosier
-spring.datasource.username=hoosier
-spring.datasource.password=hoosier
+#spring.datasource.url=jdbc:mysql://localhost:3306/Hoosier
+#spring.datasource.username=hoosier
+#spring.datasource.password=hoosier
+
+spring.datasource.url= jdbc:mysql://db.soic.indiana.edu:3306/p565f18_srajash
+spring.datasource.password= my+sql=p565f18_srajash
+spring.datasource.username= p565f18_srajash
+#driver-class-name: com.mysql.jdbc.Driver
 
 ## Specify the DBMS
 spring.jpa.database= MYSQL
