Fixinf startup issues with WebSecurityConfig with facebook auth

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
   ##    username: p565f18_srajash
 
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/hoosierevents?useSSL=false
-    password: root
-    username: root
+    url: jdbc:mysql://127.0.0.1:3306/Hoosier?allowPublicKeyRetrieval=true&useSSL=false
+    password: hoosier
+    username: hoosier
   jpa:
     database: mysql
     show-sql: true
