--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
   ##    username: p565f18_srajash
 
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/Hoosier?allowPublicKeyRetrieval=true&useSSL=false
-    password: hoosier
-    username: hoosier
+    url: jdbc:mysql://hoosierevents.coqm4w0h5dae.us-east-2.rds.amazonaws.com:3306/hoosierevents?allowPublicKeyRetrieval=true&useSSL=false
+    password: hoosierevents
+    username: hoosierevents
   jpa:
     database: mysql
     show-sql: true
