--- a/pom.xml
+++ b/pom.xml
@@ -132,13 +132,13 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.2.11</version>
 		</dependency>
-		<!-- <dependency> <groupId>com.sun.xml.bind</groupId> <artifactId>jaxb-core</artifactId> 
-			<version>2.2.11</version> </dependency> <dependency> <groupId>com.sun.xml.bind</groupId> 
-			<artifactId>jaxb-impl</artifactId> <version>2.2.11</version> </dependency> 
-			<dependency> <groupId>javax.activation</groupId> <artifactId>activation</artifactId> 
-			<version>1.1.1</version> </dependency> -->
 		<!-- xml binding end -->
 
+		<!-- Messaging -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 
 
 
